update website title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;700&display=swap" rel="stylesheet">
 
-    <title>Ruben Villalta's Portafolio</title>
+    <title>Ruvilo's Portfolio</title>
 </head>
 
 <body>
